# rust-iso-20022-intergration

./: Cargo.toml  README.md
src/: main.rs
src/api/: payment.rs
src/config/: mod.rs
src/domain/: payment.rs
src/error/: mod.rs
src/infrastructure/messaging/: message_publisher.rs
src/infrastructure/middleware/: request_tracing.rs
src/service/: payment_service.rs
src/validation/: payment_validator.rs
tests/service/: payment_service_tests.rs
tests/validation/: payment_validator_tests.rs
